fix spacing of gap items

--- a/src/components/dashboard/vouchers/vouchers.css
+++ b/src/components/dashboard/vouchers/vouchers.css
@@ -5,8 +5,7 @@
 .vouchers__header{
     display: grid;
     grid-template-columns: 40% 55%;
-    gap: 1rem;
-    margin-bottom: 2rem;
+    gap: 0.5rem;
 }
 
 .centering{
